--- a/interface.ui
+++ b/interface.ui
@@ -73,21 +73,11 @@
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_TemperatureAdjustDisplay">
-    <property name="geometry">
-     <rect>
-      <x>240</x>
-      <y>80</y>
-      <width>51</width>
-      <height>21</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>30</y>
+      <y>20</y>
       <width>271</width>
       <height>29</height>
      </rect>
@@ -131,6 +121,28 @@
      </item>
     </layout>
    </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>60</y>
+      <width>51</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="gridLayout_11">
+     <item row="0" column="0">
+      <widget class="QLineEdit" name="lineEdit_TemperatureAdjustDisplay"/>
+     </item>
+     <item row="1" column="0">
+      <widget class="QPushButton" name="pushButton_TemperatureAdjustConfirm">
+       <property name="text">
+        <string>OK</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_HumidityInfo">
    <property name="geometry">
@@ -162,21 +174,11 @@
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_HumidityAdjustDisplay">
-    <property name="geometry">
-     <rect>
-      <x>240</x>
-      <y>80</y>
-      <width>51</width>
-      <height>21</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>30</y>
+      <y>20</y>
       <width>271</width>
       <height>29</height>
      </rect>
@@ -220,6 +222,28 @@
      </item>
     </layout>
    </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>60</y>
+      <width>51</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="gridLayout_12">
+     <item row="0" column="0">
+      <widget class="QLineEdit" name="lineEdit_HumidityAdjustDisplay"/>
+     </item>
+     <item row="1" column="0">
+      <widget class="QPushButton" name="pushButton_HumidityAdjustConfirm">
+       <property name="text">
+        <string>OK</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_SmokeInfo">
    <property name="geometry">
@@ -251,21 +275,11 @@
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit_SmokeAdjustDisplay">
-    <property name="geometry">
-     <rect>
-      <x>240</x>
-      <y>80</y>
-      <width>51</width>
-      <height>21</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>30</y>
+      <y>20</y>
       <width>271</width>
       <height>29</height>
      </rect>
@@ -304,6 +318,28 @@
       <widget class="QRadioButton" name="radioButton_SmokeAdjustLow">
        <property name="text">
         <string>浓度下限</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>60</y>
+      <width>51</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="gridLayout_13">
+     <item row="0" column="0">
+      <widget class="QLineEdit" name="lineEdit_SmokeAdjustDisplay"/>
+     </item>
+     <item row="1" column="0">
+      <widget class="QPushButton" name="pushButton_SmokeAdjustConfirm">
+       <property name="text">
+        <string>OK</string>
        </property>
       </widget>
      </item>
@@ -358,18 +394,83 @@
    <property name="title">
     <string>状态显示</string>
    </property>
-   <widget class="QLabel" name="label_6">
+   <widget class="QLabel" name="label_CurrentDateAndTime">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>80</y>
+      <width>91</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>当前时间：</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_DateAndTime">
+    <property name="geometry">
+     <rect>
+      <x>470</x>
+      <y>80</y>
+      <width>151</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Date And Time</string>
+    </property>
+   </widget>
+   <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
       <x>20</x>
       <y>40</y>
-      <width>72</width>
-      <height>15</height>
+      <width>189</width>
+      <height>22</height>
      </rect>
     </property>
-    <property name="text">
-     <string>TextLabel</string>
+    <layout class="QGridLayout" name="gridLayout_9">
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_CurrentComStatement">
+       <property name="text">
+        <string>串口状态：</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLabel" name="label_ComStatement">
+       <property name="text">
+        <string>串口状态</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>80</y>
+      <width>189</width>
+      <height>22</height>
+     </rect>
     </property>
+    <layout class="QGridLayout" name="gridLayout_10">
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_CurrentFireStatement">
+       <property name="text">
+        <string>火灾状态：</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLabel" name="label_FireStatement">
+       <property name="text">
+        <string>火灾状态</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_ComInfo">
@@ -417,7 +518,18 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QComboBox" name="comboBox_BaudRate"/>
+      <widget class="QComboBox" name="comboBox_BaudRate">
+       <item>
+        <property name="text">
+         <string>9600</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>115200</string>
+        </property>
+       </item>
+      </widget>
      </item>
     </layout>
    </widget>
