--- a/interface.ui
+++ b/interface.ui
@@ -64,13 +64,23 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>80</y>
+      <y>60</y>
       <width>101</width>
       <height>22</height>
      </rect>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_TemperatureAdjustDisplay">
+    <property name="geometry">
+     <rect>
+      <x>241</x>
+      <y>61</y>
+      <width>49</width>
+      <height>26</height>
+     </rect>
     </property>
    </widget>
    <widget class="QWidget" name="">
@@ -124,17 +134,21 @@
    <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>60</y>
-      <width>51</width>
-      <height>61</height>
+      <x>140</x>
+      <y>90</y>
+      <width>151</width>
+      <height>31</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_11">
      <item row="0" column="0">
-      <widget class="QLineEdit" name="lineEdit_TemperatureAdjustDisplay"/>
+      <widget class="QPushButton" name="pushButton_SetTemperatureLimitValue">
+       <property name="text">
+        <string>SET</string>
+       </property>
+      </widget>
      </item>
-     <item row="1" column="0">
+     <item row="0" column="1">
       <widget class="QPushButton" name="pushButton_TemperatureAdjustConfirm">
        <property name="text">
         <string>OK</string>
@@ -165,13 +179,23 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>80</y>
+      <y>60</y>
       <width>101</width>
       <height>22</height>
      </rect>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_HumidityAdjustDisplay">
+    <property name="geometry">
+     <rect>
+      <x>241</x>
+      <y>61</y>
+      <width>49</width>
+      <height>26</height>
+     </rect>
     </property>
    </widget>
    <widget class="QWidget" name="">
@@ -225,17 +249,21 @@
    <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>60</y>
-      <width>51</width>
-      <height>61</height>
+      <x>140</x>
+      <y>90</y>
+      <width>151</width>
+      <height>31</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_12">
      <item row="0" column="0">
-      <widget class="QLineEdit" name="lineEdit_HumidityAdjustDisplay"/>
+      <widget class="QPushButton" name="pushButton_SetHumidityLimitValue">
+       <property name="text">
+        <string>SET</string>
+       </property>
+      </widget>
      </item>
-     <item row="1" column="0">
+     <item row="0" column="1">
       <widget class="QPushButton" name="pushButton_HumidityAdjustConfirm">
        <property name="text">
         <string>OK</string>
@@ -266,13 +294,23 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>80</y>
+      <y>60</y>
       <width>101</width>
       <height>22</height>
      </rect>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_SmokeAdjustDisplay">
+    <property name="geometry">
+     <rect>
+      <x>241</x>
+      <y>61</y>
+      <width>49</width>
+      <height>26</height>
+     </rect>
     </property>
    </widget>
    <widget class="QWidget" name="">
@@ -326,17 +364,21 @@
    <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>60</y>
-      <width>51</width>
-      <height>61</height>
+      <x>140</x>
+      <y>90</y>
+      <width>151</width>
+      <height>31</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_13">
      <item row="0" column="0">
-      <widget class="QLineEdit" name="lineEdit_SmokeAdjustDisplay"/>
+      <widget class="QPushButton" name="pushButton_SetSmokeLimitValue">
+       <property name="text">
+        <string>SET</string>
+       </property>
+      </widget>
      </item>
-     <item row="1" column="0">
+     <item row="0" column="1">
       <widget class="QPushButton" name="pushButton_SmokeAdjustConfirm">
        <property name="text">
         <string>OK</string>
